--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -1,27 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ed Sheeran</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header>
-      <h2 id="title">Ed Sheeran</h2>
 
-      <nav></nav>
-    </header>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ed Sheeran</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <header>
+    <h1 id="title">Ed Sheeran</h1>
+  </header>
+  <nav>
+    <div class="social">
+      <div class="left">
+        <a href="https://store.edsheeran.com/uk"><b>Official Store</b></a>
+      </div>
+      <div class="right navbar">
+        <a href="https://www.facebook.com/EdSheeranMusic/">Facebook</a>
+        <a href="https://twitter.com/edsheeran">Twitter</a>
+        <a href="https://www.instagram.com/teddysphotos/">Instagram</a>
+        <a href="https://uk.youtube.com/user/EdSheeran">YouTube</a>
+        <a href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V>Spotify">Spotify</a>
+        <a href="https://music.apple.com/gb/artist/ed-sheeran/183313439">Apple Music</a>
+        <a href="https://www.deezer.com/artist/384236">Deezer</a>
+      </div>
+    </div>
+  </nav>
+  <main id="main">
+    <div id="content">
+      <div class="picture">
+        <div id="img-div">
+          <img id="image"
+            src="https://studiosol-a.akamaihd.net/uploadfile/letras/fotos/9/6/4/0/9640a9aa5c9fd17dd1a3015756725789.jpg"
+            alt="Ed Sheeran" />
+          <div class="description">
+            <figcaption id="img-caption">Ed Sheeran</figcaption>
+          </div>
+        </div>
+      </div>
+      <div id="tribute-info">
+        <h3>Intro to Ed Sheeran </h3>
+        <p>Edward Christopher Sheeran, better known as Ed Sheeran, is a musician and composer, born on February 17,
+          1991, in Hebden
+          Bridge, United Kingdom. Ed Sheeran is known in the world for his great compositions such as 'Thinking Out
+          Loud,'
+          'Photograph,' 'Shape of You' and 'Perfect.'</p>
+        <h3>Getting to know Ed Sheeran </h3>
+
+        <p>
+          Ed Sheeran is a singer/songwriter who began playing guitar at a
+          young age and soon after started writing his own songs. When he was
+          just a teenager, he moved to London to pursue his music, and his
+          outpouring of creativity added up to several early EPs and hundreds
+          of live shows. Drawing attention for his online performances,
+          Sheeran hit No. 1 on the iTunes chart before he ever signed with a
+          record label. Since signing with Atlantic, Sheeran has sold millions
+          of records and won Grammys for hits like "Thinking Out Loud" and
+          "Shape of You," as well as his 2018 album, ÷. Additional info <a id="tribute-link"
+            href="https://www.biography.com/musician/ed-sheeran" target="_blank">here</a>
+        </p>
+      </div>
+    </div>
+  </main>
+
+</body>
+
 </html>
