Deleting empty lines

--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -48,12 +48,9 @@
       <div id="tribute-info">
         <h3>Intro to Ed Sheeran </h3>
         <p>Edward Christopher Sheeran, better known as Ed Sheeran, is a musician and composer, born on February 17,
-          1991, in Hebden
-          Bridge, United Kingdom. Ed Sheeran is known in the world for his great compositions such as 'Thinking Out
-          Loud,'
-          'Photograph,' 'Shape of You' and 'Perfect.'</p>
+          1991, in Hebden Bridge, United Kingdom. Ed Sheeran is known in the world for his great compositions such as
+          'Thinking Out Loud','Photograph','Shape of You' and 'Perfect.'</p>
         <h3>Getting to know Ed Sheeran </h3>
-
         <p>
           Ed Sheeran is a singer/songwriter who began playing guitar at a
           young age and soon after started writing his own songs. When he was
@@ -69,7 +66,6 @@
       </div>
     </div>
   </main>
-
 </body>
 
 </html>
