--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -27,7 +27,7 @@
         <a href="https://twitter.com/edsheeran">Twitter</a>
         <a href="https://www.instagram.com/teddysphotos/">Instagram</a>
         <a href="https://uk.youtube.com/user/EdSheeran">YouTube</a>
-        <a href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V>Spotify">Spotify</a>
+        <a href="https://open.spotify.com/artist/6eUKZXaKkcviH0Ku9w2n3V">Spotify</a>
         <a href="https://music.apple.com/gb/artist/ed-sheeran/183313439">Apple Music</a>
         <a href="https://www.deezer.com/artist/384236">Deezer</a>
       </div>
@@ -46,11 +46,15 @@
         </div>
       </div>
       <div id="tribute-info">
-        <h3>Intro to Ed Sheeran </h3>
-        <p>Edward Christopher Sheeran, better known as Ed Sheeran, is a musician and composer, born on February 17,
-          1991, in Hebden Bridge, United Kingdom. Ed Sheeran is known in the world for his great compositions such as
-          'Thinking Out Loud','Photograph','Shape of You' and 'Perfect.'</p>
-        <h3>Getting to know Ed Sheeran </h3>
+        <h3>Intro to Ed Sheeran</h3>
+        <p>
+          Edward Christopher Sheeran, better known as Ed Sheeran, is a
+          musician and composer, born on February 17, 1991, in Hebden Bridge,
+          United Kingdom. Ed Sheeran is known in the world for his great
+          compositions such as 'Thinking Out Loud','Photograph','Shape of You'
+          and 'Perfect.'
+        </p>
+        <h3>Getting to know Ed Sheeran</h3>
         <p>
           Ed Sheeran is a singer/songwriter who began playing guitar at a
           young age and soon after started writing his own songs. When he was
@@ -60,8 +64,8 @@
           Sheeran hit No. 1 on the iTunes chart before he ever signed with a
           record label. Since signing with Atlantic, Sheeran has sold millions
           of records and won Grammys for hits like "Thinking Out Loud" and
-          "Shape of You," as well as his 2018 album, ÷. Additional info <a id="tribute-link"
-            href="https://www.biography.com/musician/ed-sheeran" target="_blank">here</a>
+          "Shape of You," as well as his 2018 album, ÷. Additional info
+          <a id="tribute-link" href="https://www.biography.com/musician/ed-sheeran" target="_blank">here</a>
         </p>
       </div>
     </div>
