--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -8,12 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Survey Form</title>
 </head>
 
 <body>
+  <div class="container">
+    <div class="header">
+      <h1 id="title">Survey Form</h1>
+      <p id="description">Please answer the folllowing questions and submit the form</p>
+    </div>
+    <form id="survey-form">
+      <div class="form-group">
 
+      </div>
+    </form>
+  </div>
 </body>
 
 </html>
