--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -18,10 +18,20 @@
       <h1 id="title">Survey Form</h1>
       <p id="description">Please answer the folllowing questions and submit the form</p>
     </div>
-    <form id="survey-form">
+    <form id="survey-form" action="./thanks.html">
       <div class="form-group">
-
+        <label for="name">Name:</label>
+        <input id="name" type="text" required placeholder="Enter your name...">
       </div>
+      <div class="form-group">
+        <label for="name">Email:</label>
+        <input id="email" type="email" required placeholder="Enter your email...">
+      </div>
+      <div class="buttons-group">
+        <button type="reset">Reset</button>
+        <button type="submit">Submit</button>
+      </div>
+
     </form>
   </div>
 </body>
