--- a/survey-form/thanks.html
+++ b/survey-form/thanks.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap"
+      rel="stylesheet"
+    />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet" />
-  <title>Document</title>
-</head>
-
-<body>
-  <div class="container">
-    <h1 id="thanks">Thank you!</h1>
-    <span>We apreciate your time for answering those questions</span>
-  </div>
-</body>
-
+  <body>
+    <div class="container">
+      <h1 id="thanks">Thank you!</h1>
+      <span>We apreciate your time for answering those questions</span>
+    </div>
+  </body>
 </html>
