--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -61,43 +61,25 @@
             Electronic</label
           >
           <label
-            ><input type="checkbox" name="prefer" value="country" />
-            Country</label
+            ><input type="checkbox" name="prefer" value="country" /> Country</label
           >
+          <label><input type="checkbox" name="prefer" value="funk" /> Funk</label>
           <label
-            ><input type="checkbox" name="prefer" value="funk" /> Funk</label
+            ><input type="checkbox" name="prefer" value="hip-hop" /> Hip hop</label
           >
-          <label
-            ><input type="checkbox" name="prefer" value="hip-hop" /> Hip
-            hop</label
-          >
-          <label
-            ><input type="checkbox" name="prefer" value="jazz" /> Jazz</label
-          >
-          <label
-            ><input type="checkbox" name="prefer" value="latin" /> Latin</label
-          >
+          <label><input type="checkbox" name="prefer" value="jazz" /> Jazz</label>
+          <label><input type="checkbox" name="prefer" value="latin" /> Latin</label>
           <label><input type="checkbox" name="prefer" value="pop" /> Pop</label>
+          <label><input type="checkbox" name="prefer" value="punk" /> Punk</label>
           <label
-            ><input type="checkbox" name="prefer" value="punk" /> Punk</label
+            ><input type="checkbox" name="prefer" value="reggae" /> Reggae</label
           >
-          <label
-            ><input type="checkbox" name="prefer" value="reggae" />
-            Reggae</label
-          >
-          <label
-            ><input type="checkbox" name="prefer" value="rock" /> Rock</label
-          >
-          <label
-            ><input type="checkbox" name="prefer" value="metal" /> Metal</label
-          >
-          <label
-            ><input type="checkbox" name="prefer" value="soul" /> Soul</label
-          >
+          <label><input type="checkbox" name="prefer" value="rock" /> Rock</label>
+          <label><input type="checkbox" name="prefer" value="metal" /> Metal</label>
+          <label><input type="checkbox" name="prefer" value="soul" /> Soul</label>
           <label><input type="checkbox" name="prefer" value="r&b" /> R&B</label>
           <label
-            ><input type="checkbox" name="prefer" value="others" />
-            Others</label
+            ><input type="checkbox" name="prefer" value="others" /> Others</label
           >
         </div>
 
@@ -122,7 +104,8 @@
             ><input type="radio" name="name" checked value="yes" /> Yes</label
           >
           <label for="radio3">
-            <input type="radio" name="name" value="no" /> No</label
+            <input type="radio" name="name" value="no" />
+            No</label
           >
           <label for="radio1"
             ><input type="radio" name="name" value="maybe" /> Maybe</label
