--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -112,9 +112,24 @@
           >
         </div>
 
-        <div class="buttons-group">
-          <button type="reset">Reset</button>
-          <button id="submit" type="submit">Submit</button>
+        <div class="form-group">
+          <p id="comment">
+            Would you like to give some FeedBack or suggestions to the dev? 📝
+          </p>
+          <textarea
+            cols="30"
+            rows="10"
+            placeholder="Enter your comment here..."
+          ></textarea>
+        </div>
+
+        <div class="form-group">
+          <div class="button">
+            <button type="reset">Reset</button>
+          </div>
+          <div class="button">
+            <button id="submit" type="submit">Submit</button>
+          </div>
         </div>
       </form>
     </div>
