--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -124,10 +124,10 @@
         </div>
 
         <div class="form-group">
-          <div class="button">
+          <div class="reset">
             <button type="reset">Reset</button>
           </div>
-          <div class="button">
+          <div class="submit">
             <button id="submit" type="submit">Submit</button>
           </div>
         </div>
