Fixing writing syntax

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -17,9 +17,9 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1 id="title">Music preferences studying</h1>
+        <h1 id="title">Musical preferences while studying</h1>
         <p id="description">
-          Please answer the folllowing questions and submit the form
+          Please answer the following questions and submit the form
         </p>
       </div>
       <form id="survey-form" action="./thanks.html">
