--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -125,7 +125,7 @@
 
         <div class="form-group">
           <div class="reset">
-            <button type="reset">Reset</button>
+            <button id="reset" type="reset">Reset</button>
           </div>
           <div class="submit">
             <button id="submit" type="submit">Submit</button>
