Feat: Adding structure

--- a/survey-form/HTML/thanks.html
+++ b/survey-form/HTML/thanks.html
@@ -16,8 +16,10 @@
 
   <body>
     <div class="container">
-      <h1 id="thanks">Thank you!</h1>
-      <span>We apreciate your time for answering those questions</span>
+      <div class="box">
+        <h1 class="thanks">Thank you!</h1>
+        <p>We apreciate your time for answering those questions</p>
+      </div>
     </div>
   </body>
 </html>
