--- a/survey-form/HTML/index.html
+++ b/survey-form/HTML/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="../CSS/styles.css" />
     <title>Survey Form</title>
   </head>
@@ -29,7 +23,6 @@
             id="name"
             type="text"
             name="name"
-            type="text"
             required
             placeholder="Enter your name..."
           />
@@ -133,5 +126,6 @@
         </div>
       </form>
     </div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
