--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Landing Page</title>
   </head>
   <body>
     <header>
-      <nav>
-        <div class="siteLogo">
+      <nav class="navbar">
+        <div class="navbar__logo">
           <a href="index.html">
-            <img src="./img/logo.png" alt="logo" />
+            <img id="logo" src="./img/logo.png" alt="logo" />
           </a>
+          <h2 id="navbar__name">Autoservicios Jaguar</h2>
         </div>
-        <div class="links">
+        <a href="#" class="toggle-btn">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar__links">
           <ul>
             <li><a href="#">Sobre Nosotros</a></li>
             <li><a href="#">Servicios</a></li>
@@ -24,5 +31,6 @@
         </div>
       </nav>
     </header>
+    <script src="./main.js"></script>
   </body>
 </html>
