--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Landing Page</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar">
+    <header id="header">
+      <nav id="nav-bar">
         <div class="navbar__logo">
           <a href="index.html">
-            <img id="logo" src="./img/logo.png" alt="logo" />
+            <img id="header-img" src="./img/logo.png" alt="logo" />
           </a>
           <h2 id="navbar__name">Autoservicios Jaguar</h2>
         </div>
@@ -24,13 +23,14 @@
         </a>
         <div class="navbar__links">
           <ul>
-            <li><a href="#">Sobre Nosotros</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#" class="nav-link">Sobre Nosotros</a></li>
+            <li><a href="#" class="nav-link">Servicios</a></li>
+            <li><a href="#" class="nav-link">Contacto</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <script src="./main.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
