--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -41,6 +41,7 @@
           <h1 id="contact">Deja tu correo para ser contactado</h1>
         </div>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input name="name" id="name" type="text" placeholder="Nombre" required />
           <input
             name="email"
             id="email"
@@ -48,7 +49,7 @@
             placeholder="Correo electronico"
             required
           />
-          <input type="submit" value="Enviar" id="send" />
+          <input type="submit" value="Enviar" id="submit" />
         </form>
       </div>
     </section>
