Feat: Added description structure

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -34,10 +34,33 @@
         </div>
       </nav>
     </header>
-    <section>
+    <section id="compromise">
       <div class="container">
-        <div class="section-contact">
-          <i class="fa-solid fa-envelope"></i>
+        <div id="about-us">
+          <blockquote>
+            <h2>Nuestro Compromiso</h2>
+            <p>
+              Queremos que dejes a un lado los dolores de cabeza cuando vas al
+              mecánico y <strong>tengas una experiencia única.</strong> Gracias a
+              nuestra atención personalizada y a
+              <strong>+10 años de experiencia </strong> podrás recibir lo que
+              necesitas, ya que nuestros ingenieros se encargarán de que tengas a tu
+              carro en carretera en poco tiempo.
+            </p>
+            <strong><a href="#contact" id="cta">Agenda ya tu cita</a></strong>
+          </blockquote>
+        </div>
+        <div class="img-description">
+          <div class="description-container">
+            <img src="./img/description-img.jpg" alt="Mision" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact-info">
+      <div class="container-contact">
+        <div class="contact-section">
+          <i class="fa-solid fa-envelope fa-xl"></i>
           <h1 id="contact">Deja tu correo para ser contactado</h1>
         </div>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
