--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -41,11 +41,12 @@
             <h2>Nuestro Compromiso</h2>
             <p>
               Queremos que dejes a un lado los dolores de cabeza cuando vas al
-              mecánico y <strong>tengas una experiencia única.</strong> Gracias a
-              nuestra atención personalizada y a
+              mecánico y
+              <strong>tengas una experiencia única.</strong> Gracias a nuestra
+              atención personalizada y a
               <strong>+10 años de experiencia </strong> podrás recibir lo que
-              necesitas, ya que nuestros ingenieros se encargarán de que tengas a tu
-              carro en carretera en poco tiempo.
+              necesitas, ya que nuestros ingenieros se encargarán de que tengas
+              a tu carro en carretera en poco tiempo.
             </p>
             <strong><a href="#contact" id="cta">Agenda ya tu cita</a></strong>
           </blockquote>
@@ -57,6 +58,36 @@
         </div>
       </div>
     </section>
+    <section id="services">
+      <div class="services-container">
+        <div class="header-services">
+          <h1>Servicios</h1>
+        </div>
+        <div class="span-container">
+          <span>
+            <i class="fa-solid fa-wrench fa-lg"></i> Mecánica y servicio
+            automotriz
+          </span>
+          <span>
+            <i class="fa-solid fa-car-rear fa-lg"></i> Afinaciones fuel
+            injection
+          </span>
+          <span
+            ><i class="fa-solid fa-toolbox fa-lg"></i> Frenos y clutch
+          </span>
+          <span>
+            <i class="fa-solid fa-car-rear fa-lg"></i> Marchas y alternadores
+          </span>
+          <span>
+            <i class="fa-solid fa-laptop fa-lg"></i> Diagnósticos por
+            computadora
+          </span>
+          <span>
+            <i class="fa-solid fa-car-rear fa-lg"></i> Laboratorio de inyectores
+          </span>
+        </div>
+      </div>
+    </section>
     <section id="contact-info">
       <div class="container-contact">
         <div class="contact-section">
@@ -64,7 +95,13 @@
           <h1 id="contact">Deja tu correo para ser contactado</h1>
         </div>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
-          <input name="name" id="name" type="text" placeholder="Nombre" required />
+          <input
+            name="name"
+            id="name"
+            type="text"
+            placeholder="Nombre"
+            required
+          />
           <input
             name="email"
             id="email"
@@ -76,6 +113,47 @@
         </form>
       </div>
     </section>
+    <footer id="footer">
+      <div class="contact">
+        <div id="contact-info">
+          <h3>Contacto</h3>
+        </div>
+        <span>
+          <a
+            href="https://www.facebook.com/jaguarquiroz18/"
+            class="contact-links"
+          >
+            <i class="fa-brands fa-facebook-f fa-xl"></i> Facebook
+          </a>
+        </span>
+        <span>
+          <a
+            href="https://api.whatsapp.com/send?phone=524491030195&text=Hola,%20buen%20d%C3%ADa.%20Me%20interesar%C3%ADa..."
+            class="contact-links"
+          >
+            <i class="fa-brands fa-whatsapp fa-xl"></i> WhatsApp
+          </a>
+        </span>
+        <span>
+          <a
+            href="https://www.tiktok.com/@autoservicios.jaguar"
+            class="contact-links"
+          >
+            <i class="fa-brands fa-tiktok"></i> Tiktok
+          </a>
+        </span>
+        <span>
+          <a href="tel:+52 449 103 0195" class="contact-links">
+            <i class="fa-solid fa-phone"></i> Teléfono
+          </a>
+        </span>
+        <span>
+          <a href="mailto:dafq1030@gmail.com" class="contact-links">
+            <i class="fa-solid fa-envelope"></i> Correo
+          </a>
+        </span>
+      </div>
+    </footer>
     <script src="./main.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
