BREAKING CHANGE: Introducing video for branding purposes

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -86,6 +86,20 @@
             <i class="fa-solid fa-car-rear fa-lg"></i> Laboratorio de inyectores
           </span>
         </div>
+        <div class="video">
+          <iframe
+            id="video"
+            src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjaguarquiroz18%2Fvideos%2F381682563622868%2F&width=500&show_text=false&height=500&appId"
+            width="500"
+            height="500"
+            style="border: none; overflow: hidden"
+            scrolling="no"
+            frameborder="0"
+            allowfullscreen="true"
+            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+            allowfullscreen="true"
+          ></iframe>
+        </div>
       </div>
     </section>
     <section id="contact-info">
@@ -115,43 +129,45 @@
     </section>
     <footer id="footer">
       <div class="contact">
-        <div id="contact-info">
-          <h3>Contacto</h3>
+        <div id="footer-contact-info">
+          <h3 id="hinf">Contáctanos</h3>
         </div>
-        <span>
-          <a
-            href="https://www.facebook.com/jaguarquiroz18/"
-            class="contact-links"
-          >
-            <i class="fa-brands fa-facebook-f fa-xl"></i> Facebook
-          </a>
-        </span>
-        <span>
-          <a
-            href="https://api.whatsapp.com/send?phone=524491030195&text=Hola,%20buen%20d%C3%ADa.%20Me%20interesar%C3%ADa..."
-            class="contact-links"
-          >
-            <i class="fa-brands fa-whatsapp fa-xl"></i> WhatsApp
-          </a>
-        </span>
-        <span>
-          <a
-            href="https://www.tiktok.com/@autoservicios.jaguar"
-            class="contact-links"
-          >
-            <i class="fa-brands fa-tiktok"></i> Tiktok
-          </a>
-        </span>
-        <span>
-          <a href="tel:+52 449 103 0195" class="contact-links">
-            <i class="fa-solid fa-phone"></i> Teléfono
-          </a>
-        </span>
-        <span>
-          <a href="mailto:dafq1030@gmail.com" class="contact-links">
-            <i class="fa-solid fa-envelope"></i> Correo
-          </a>
-        </span>
+        <div class="links-container">
+          <span>
+            <a
+              href="https://www.facebook.com/jaguarquiroz18/"
+              class="contact-links"
+            >
+              <i class="fa-brands fa-facebook-f fa-xl"></i> Facebook
+            </a>
+          </span>
+          <span>
+            <a
+              href="https://api.whatsapp.com/send?phone=524491030195&text=Hola,%20buen%20d%C3%ADa.%20Me%20interesar%C3%ADa..."
+              class="contact-links"
+            >
+              <i class="fa-brands fa-whatsapp fa-xl"></i> WhatsApp
+            </a>
+          </span>
+          <span>
+            <a
+              href="https://www.tiktok.com/@autoservicios.jaguar"
+              class="contact-links"
+            >
+              <i class="fa-brands fa-tiktok"></i> Tiktok
+            </a>
+          </span>
+          <span>
+            <a href="tel:+52 449 103 0195" class="contact-links">
+              <i class="fa-solid fa-phone"></i> Teléfono
+            </a>
+          </span>
+          <span>
+            <a href="mailto:dafq1030@gmail.com" class="contact-links">
+              <i class="fa-solid fa-envelope"></i> Correo
+            </a>
+          </span>
+        </div>
       </div>
     </footer>
     <script src="./main.js"></script>
