Feat: Adding almost the full body of the page

--- a/documentation-page/index.html
+++ b/documentation-page/index.html
@@ -7,32 +7,109 @@
     <title>Documentation page</title>
   </head>
   <body>
-    <nav class="nav-bar">
+    <nav id="navbar">
+      <header>JavaScript Introducción</header>
       <ul>
-        <li><a href='#'>Inicio</a></li>
-        <li><a href='#'>Idea general</a></li>
-        <li><a href='#'>Introducción</a></li>
-        <li><a href='#'>Constantes</a></li>
-        <li><a href='#'>Variables</a></li>
-        <li><a href='#'>Tipos de datos</a></li>
-        <li><a href='#'>Arrays</a></li>
-        <li><a href='#'>Estructuras de control</a></li>
-        <!-- <ul>
+        <li><a class="nav-link" href="#Inicio">Inicio</a></li>
+        <li><a class="nav-link" href="#Idea_general">Idea general</a></li>
+        <li><a class="nav-link" href="#Introducción">Introducción</a></li>
+        <li><a class="nav-link" href="#Constantes">Constantes</a></li>
+        <li><a class="nav-link" href="#Variables">Variables</a></li>
+        <li><a class="nav-link" href="#Tipos_de_datos">Tipos de datos</a></li>
+        <li><a class="nav-link" href="#Arrays">Arrays</a></li>
+        <li>
+          <a class="nav-link" href="#Estructuras_de_control"
+            >Estructuras de control</a
+          >
+        </li>
+        <ul>
           <li>If</li>
           <li>Switch</li>
           <li>For</li>
           <li>While</li>
           <li>Do while</li>
           <li>Foreach</li>
-        </ul> -->
-        <li> <a href="#">Funciones</a></li>
-        <li> <a href="#">Resumen</a></li>        
-        <li> <a href="#">Referencias</a></li>
+        </ul>
+        <li><a class="nav-link" href="#Funciones">Funciones</a></li>
+        <li><a class="nav-link" href="#Resumen">Resumen</a></li>
+        <li><a class="nav-link" href="#Referencias">Referencias</a></li>
       </ul>
-      
-
     </nav>
-
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script> -->
- </html>
+    <main id="main-doc">
+      <section class="main-section" id="Inicio">
+        <header>Inicio</header>
+        <article>
+          <p>Bienvenido</p>
+        </article>
+      </section>
+      <section class="main-section" id="Idea_general">
+        <header>Idea general</header>
+        <article>
+          <p>
+            Este curso está pensado para aquellos que van incursionando en la
+            maravilla del mundo del software y sobre todo en el desarrollo web.
+            Espero que puedas aprender un poco de lo que he aprendido en este
+            año de decidicarme en la mayoría de mi tiempo.
+          </p>
+        </article>
+      </section>
+      <section class="main-section" id="Introducción">
+        <header>Introducción</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Constantes">
+        <header>Constantes</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Variables">
+        <header>Variables</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Tipos_de_datos">
+        <header>Tipos de datos</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Arrays">
+        <header>Arrays</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Estructuras_de_control">
+        <header>Estructuras de control</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Funciones">
+        <header>Funciones</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Resumen">
+        <header>Resumen</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+      <section class="main-section" id="Referencias">
+        <header>Referencias</header>
+        <article>
+          <p></p>
+        </article>
+      </section>
+    </main>
+    <footer>Made with [love] from Mexico</footer>
+  </body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script> -->
+</html>
