Feat: Adding more content

--- a/documentation-page/index.html
+++ b/documentation-page/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav id="navbar">
-      <header>JavaScript Introducción</header>
+      <header>Introducción a JavaScript</header>
       <ul>
         <li><a class="nav-link" href="#Inicio">Inicio</a></li>
         <li><a class="nav-link" href="#Idea_general">Idea general</a></li>
@@ -39,7 +39,23 @@
       <section class="main-section" id="Inicio">
         <header>Inicio</header>
         <article>
-          <p>Bienvenido</p>
+          <p>
+            Bienvenid@ a este curso donde aprenderas los conceptos básicos de
+            JavaScript, estos servirán de base para poder aprender a desarrollar
+            aplicaciones y scripts más complejos y avanzados. Así que si
+            consideras que esto es muy básico, lo es para ir avanzando poco a
+            poco. Recuerda que la consistencia hará que seas un mejor
+            desarrollador 🙌 por eso te recomiendo que no sigas leyendo otra
+            sección sin haber comprendido lo que se te presenta.
+          </p>
+          <p>
+            Si tienes alguna duda puedes checar este 👉
+            <a href="https://github.com/AlvaroFierro/Javascript-basico">
+              repositorio</a
+            >
+            gratuito que he hecho cubre algunos de los temas que verás a
+            continuación además de otros un poco más avanzados.
+          </p>
         </article>
       </section>
       <section class="main-section" id="Idea_general">
@@ -56,7 +72,23 @@
       <section class="main-section" id="Introducción">
         <header>Introducción</header>
         <article>
-          <p></p>
+          <p>
+            JavaScript es un lenguage de programación o de secuencias de
+            comandos que te permite implementar funciones complejas en las
+            páginas web, cada vez que una página web hace algo más que mostrar
+            información estática, como actualizaciones de contenido, gráficos
+            2D/3D, repoductores de video, etc., puedes estar muy seguro de que
+            JavaScript se encuentre involucrado.
+          </p>
+          <p>
+            Además de esto, permite que las páginas puedan tener una interacción
+            más profunda, a nivel donde el usuario pueda hacer cierto tipo de
+            funcionalidades y no nadamás sentarse a ver el contenido. De hecho,
+            es la única herramienta en el navegador que nos permite crear
+            servidores, aplicaciones, páginas web, entre otras. Por eso es uno
+            de los lenguajes más recomendados al empezar a programar, así que no
+            le tengas miedo 😄.
+          </p>
         </article>
       </section>
       <section class="main-section" id="Constantes">
@@ -104,7 +136,24 @@
       <section class="main-section" id="Referencias">
         <header>Referencias</header>
         <article>
-          <p></p>
+          <p>
+            Aquí puedes leer los sitios donde he basado para una explicación más
+            profunda
+          </p>
+          <ul>
+            <li>
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript"
+                >Documentación oficial de MDN</a
+              >
+            </li>
+            <li><a href="https://javascript.info/">JavaScript info</a></li>
+            <li>
+              <a href="https://fullstackopen.com/en/part1/java_script"
+                >fullstackopen</a
+              >
+            </li>
+          </ul>
         </article>
       </section>
     </main>
